--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,11 @@
                             <i class="fas fa-chart-bar me-1"></i>Progress
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" onclick="openEditProfile(); return false;">
+                            <i class="fas fa-user-edit me-1"></i>Edit Profile
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
